// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrganizationAuthList renders 1`] = `
<div
  className="sso"
>
  <StyledSettingsPageHeading
    noTitleStyles={false}
    title="Authentication"
  />
  <PermissionAlert />
  <Panel>
    <PanelHeader>
      Choose a provider
    </PanelHeader>
    <PanelBody
      flexible={false}
      withPadding={false}
    >
      <PanelAlert
        type="info"
      >
        <span
          key="5"
        >
          <span
            key="0"
          >
            Get started with Single Sign-on for your organization by selecting a provider. Read more in our 
          </span>
          <ForwardRef(ExternalLink)
            href="https://docs.sentry.io/learn/sso/"
            key="2"
          >
            <span
              key="1"
            >
              SSO documentation
            </span>
          </ForwardRef(ExternalLink)>
          <span
            key="3"
          >
            .
          </span>
        </span>
      </PanelAlert>
      <form
        action="/organizations/org-slug/auth/configure/"
        method="POST"
      >
        <input
          name="csrfmiddlewaretoken"
          type="hidden"
          value=""
        />
        <input
          name="init"
          type="hidden"
          value="1"
        />
        <ProviderItem
          key="dummy"
          onConfigure={[Function]}
          provider={
            Object {
              "key": "dummy",
              "name": "Dummy",
              "requiredFeature": "organizations:sso-basic",
            }
          }
        />
        <ProviderItem
          key="dummy2"
          onConfigure={[Function]}
          provider={
            Object {
              "key": "dummy2",
              "name": "Dummy SAML",
              "requiredFeature": "organizations:sso-saml2",
            }
          }
        />
      </form>
    </PanelBody>
  </Panel>
</div>
`;

exports[`OrganizationAuthList renders with no providers 1`] = `
<div
  className="sso"
>
  <StyledSettingsPageHeading
    noTitleStyles={false}
    title="Authentication"
  />
  <PermissionAlert />
  <Panel>
    <PanelHeader>
      Choose a provider
    </PanelHeader>
    <PanelBody
      flexible={false}
      withPadding={false}
    >
      <PanelAlert
        type="info"
      >
        <span
          key="5"
        >
          <span
            key="0"
          >
            Get started with Single Sign-on for your organization by selecting a provider. Read more in our 
          </span>
          <ForwardRef(ExternalLink)
            href="https://docs.sentry.io/learn/sso/"
            key="2"
          >
            <span
              key="1"
            >
              SSO documentation
            </span>
          </ForwardRef(ExternalLink)>
          <span
            key="3"
          >
            .
          </span>
        </span>
      </PanelAlert>
      <form
        action="/organizations/org-slug/auth/configure/"
        method="POST"
      >
        <input
          name="csrfmiddlewaretoken"
          type="hidden"
          value=""
        />
        <input
          name="init"
          type="hidden"
          value="1"
        />
        <EmptyMessage>
          No authentication providers are available.
        </EmptyMessage>
      </form>
    </PanelBody>
  </Panel>
</div>
`;
